docs: update java